--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-# These individuals contributed to the hbnb project in this repository 
-
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+# I  contributed to the hbnb project in this repository
+github.com/ayhameed
+github.com/profabubakar
